--- a/package.json
+++ b/package.json
@@ -18,31 +18,28 @@
     "dev": "vite",
     "build": "vite build",
     "preview": "vite preview",
-    "netlify:dev": "netlify dev",
-    "netlify:build": "npm run build && netlify build",
     "vercel-build": "npm run build"
   },
   "dependencies": {
-    "dropbox": "^10.34.0",
-    "exceljs": "^4.3.0",
-    "file-saver": "^2.0.5",
-    "firebase": "^11.9.1",
-    "luckyexcel": "^1.0.1",
-    "vue": "^3.2.25",
-    "vue-router": "^4.5.1",
     "bcryptjs": "^2.4.3",
     "cors": "^2.8.5",
+    "dropbox": "^10.34.0",
+    "exceljs": "^4.3.0",
     "express": "^4.18.2",
+    "file-saver": "^2.0.5",
+    "firebase": "^11.9.1",
     "jsonwebtoken": "^9.0.2",
+    "luckyexcel": "^1.0.1",
+    "node-fetch": "^2.7.0",
+    "serverless-http": "^3.2.0",
     "sqlite": "^5.1.1",
     "sqlite3": "^5.1.6",
-    "serverless-http": "^3.2.0",
-    "node-fetch": "^2.7.0"
+    "vue": "^3.2.25",
+    "vue-router": "^4.5.1"
   },
   "devDependencies": {
     "@vitejs/plugin-vue": "^2.2.0",
-    "vite": "^2.8.0",
-    "netlify-cli": "^17.0.0"
+    "vite": "^2.8.0"
   },
   "license": "MIT"
 }
